[package]
name = "webcam-watch"
version = "0.1.0"
edition = "2021"
authors = ["John Morris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
inotify = "0.10.2"
tokio = {version = "1.32.0", features = ["rt", "macros", "sync"]}
tokio-stream = "0.1.14"
